[package]
edition = "2021"
name = "test-editor"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.7.0", features = ["dynamic"]}
bevy_editor_pls = {git = "https://github.com/jakobhellermann/bevy_editor_pls.git"}
